[tool.poetry]
name = "batch_sads"
version = "0.1.0"
description = ""
authors = ["Souaybou Bagayoko <souaybou.bagayoko@ginkgo-analytics.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.8.1"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
plotly = "^5.12.0"
scikit-learn = "^1.2.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
